--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,27 @@
     <title>Libre Health</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.0/css/bulma.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/hero.css" />
   </head>
   <body>
-    <div id="root"></div>
+    <div class="homepage-hero-module">
+      <div class="video-container">
+          <div class="filter"></div>
+          <video autoplay loop class="fillWidth">
+              <source src="%PUBLIC_URL%/assets/video/MP4/Healthy-Life.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
+              <source src="%PUBLIC_URL%/assets/video/WEBM/Healthy-Life.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
+          </video>
+          <!-- <div class="poster hidden">
+              <img src="%PUBLIC_URL%/assets/video/Snapshots/Healthy-Life.jpg" alt="">
+          </div> -->
+          <div id="root"></div>
+      </div>
+    </div>
+    <!-- <div id="root"></div> -->
   </body>
+  <script
+    src="https://code.jquery.com/jquery-3.2.1.min.js"
+    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+    crossorigin="anonymous"></script>
+  <script src="%PUBLIC_URL%/assets/js/hero.js"></script>
 </html>
