going to delete this branch

--- a/public/index.html
+++ b/public/index.html
@@ -27,10 +27,8 @@
               <source src="%PUBLIC_URL%/assets/video/WEBM/Healthy-Life.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
           </video>
           <div id="root"></div>
-          <!-- <div class="poster hidden">
-              <img src="%PUBLIC_URL%/assets/video/Snapshots/Healthy-Life.jpg" alt="">
-          </div> -->
       </div>
+      <!-- <div id="root"></div> -->
     </div>
     <!-- <div id="root"></div> -->
   </body>
