--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     -->
     <title>Libre Health</title>
     <link href="https://jenil.github.io/bulmaswatch/lux/bulmaswatch.min.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/aside.css" rel=stylesheet type="text/css"/>
     <!--<link href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.0/css/bulma.min.css" rel="stylesheet" type="text/css" />-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   </head>
