--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <!-- <link href="https://jenil.github.io/bulmaswatch/yeti/bulmaswatch.min.css" rel="stylesheet" type="text/css" /> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <!-- <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/hero.css" /> -->
-    <link rel="stylesheet" href="http://res.cloudinary.com/mattkim/raw/upload/v1494079150/hero_j6na7i.css">
+    <link rel="stylesheet" href="https://res.cloudinary.com/mattkim/raw/upload/v1494079150/hero_j6na7i.css">
   </head>
   <body>
     <div id="root"></div>
